--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,30 @@
 cmake_minimum_required(VERSION 3.10)
 project(toy_renderer)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 add_subdirectory(third_party)
+
 add_executable(${PROJECT_NAME}
-    main.cpp
-    src/camera/camera.cpp
-    src/ui/ui_manager.cpp
+        main.cpp
+        src/camera/camera.cpp
+        src/ui/ui_manager.cpp
 )
 
+find_package(OpenGL REQUIRED)
 
 target_include_directories(${PROJECT_NAME} PRIVATE
         ${CMAKE_SOURCE_DIR}/src
+        ${CMAKE_SOURCE_DIR}/third_party/glad/include  # Add GLAD include first
         ${CMAKE_SOURCE_DIR}/third_party/imgui
         ${CMAKE_SOURCE_DIR}/third_party/imgui/backends
+        ${CMAKE_SOURCE_DIR}/third_party/glfw/include  # Add GLFW include
+        ${CMAKE_SOURCE_DIR}/third_party/glm          # Add GLM include
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
+        OpenGL::GL
         glfw
         glm
         imgui
