--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ add_executable(${PROJECT_NAME}
         src/scene/object.cpp
         src/scene/cube.cpp
         src/render/render.cpp
+        src/ui/viewer.cpp
 )
 set(OpenGL_GL_PREFERENCE GLVND)
 find_package(OpenGL REQUIRED)
